Style improvements and reset button

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
 </head>
 
 <body>
-    <div id="game">
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
-        <div class="space" onclick="addition(this)"></div>
+    <div class="container">
+        <h1>Tic-Tac-Toe</h1>
+        <div id="game">
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="addition(this)"></div>
+        </div>
+        <button type="reset" onclick="reset()">Reset</button>
     </div>
-    <div class="x"></div>
 </body>
 
 <script type="text/javascript" src="script.js"></script>
