--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div>
 
         <div id="game">
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
-            <div class="space" onclick="addition(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
+            <div class="space" onclick="game(this)"></div>
         </div>
 
         <button type="reset" onclick="reset()">Reset</button>
